--- a/.github/workflows/BlackHat_Demo.yml
+++ b/.github/workflows/BlackHat_Demo.yml
@@ -20,9 +20,13 @@ jobs:
       - uses: actions/checkout@v2
       - uses: snyk/actions/setup@master
       - name: Snyk CLI test 
-        run: snyk test
+        run: snyk test --all-projects
         env:
           SNYK_TOKEN: ${{ secrets.SNYK_TOKEN }}
+      - name: Snyk Monitor Step
+        if: steps.build.outcome == 'failure'
+        run: snyk monitor --all-projects --org=demo-i34
+        
 
 
       
