--- a/.github/workflows/BlackHat_Demo.yml
+++ b/.github/workflows/BlackHat_Demo.yml
@@ -1,32 +1,80 @@
 name: BlackHat-GHA-Demo
-
-on:
-  push:
-    branches: [ master ]
-  pull_request:
-    branches: [ master ]
-
+on: push
 jobs:
-  build:
-
+  snyk-code-test-upload: 
     runs-on: ubuntu-latest
-
-    strategy:
-      matrix:
-        node-version: [14.x]
-        # See supported Node.js release schedule at https://nodejs.org/en/about/releases/
-
     steps:
-      - uses: actions/checkout@v2
-      - uses: snyk/actions/setup@master
-      - name: Snyk CLI test 
-        run: snyk test --all-projects
+      - uses: actions/checkout@master
+      - name: Snyk Code Upload test
+        uses: snyk/actions/setup@master
+        #continue-on-error: true
         env:
           SNYK_TOKEN: ${{ secrets.SNYK_TOKEN }}
-      - name: Snyk Monitor Step
-        if: steps.build.outcome == 'failure'
-        run: snyk monitor --all-projects --org=demo-i34
-        
-
-
-      
+        with:
+          args: --code --report --project-name=npm-js-goof-github-action || true
+  snyk-test-job:
+     runs-on: ubuntu-latest
+     steps:
+      - uses: actions/checkout@master
+      - name: Snyk test
+        uses: snyk/actions/setup@master
+        continue-on-error: true
+        env:
+          SNYK_TOKEN: ${{ secrets.SNYK_TOKEN }}
+        with:
+          args: --test --all-projects
+  snyk-monitor-job:
+     needs: snyk-test-job
+     runs-on: ubuntu-latest
+     steps:
+      - uses: actions/checkout@master
+      - name: Snyk monitor
+        uses: snyk/actions/setup@master
+        continue-on-error: true
+        env:
+          SNYK_TOKEN: ${{ secrets.SNYK_TOKEN }}
+        with:
+           command: monitor --all-projects
+  snyk-container-test-monitor-job:
+     runs-on: ubuntu-latest
+     steps:
+     - uses: actions/checkout@master
+     - name: Build docker image
+       run: docker build . --file=Dockerfile --tag example:1.0
+     - name: Snyk container test
+       uses: snyk/actions/docker@master
+       continue-on-error: true
+       env:
+         SNYK_TOKEN: ${{ secrets.SNYK_TOKEN }}
+       with:
+         image: example:1.0
+         #args: --container example:1.0
+     - name: Snyk container monitor
+       uses: snyk/actions/docker@master
+       env:
+         SNYK_TOKEN: ${{ secrets.SNYK_TOKEN }}
+       with:
+         image: example:1.0
+         command: monitor
+         #args: --container monitor example:1.0
+  #snyk-iac-test:
+  #   runs-on: ubuntu-latest
+  #   steps:
+  #   - uses: actions/checkout@master
+  #   - name: Snyk iac test
+  #     uses: snyk/actions/iac@master
+  #     continue-on-error: true
+  #     env:
+  #       SNYK_TOKEN: ${{ secrets.SNYK_TOKEN }}
+  snyk-iac-test-report:
+     #needs: snyk-iac-test
+     runs-on: ubuntu-latest
+     steps:
+     - uses: actions/checkout@master
+     - name: Snyk IAC
+       uses: snyk/actions/iac@master
+       continue-on-error: true
+       env:
+         SNYK_TOKEN: ${{ secrets.SNYK_TOKEN }}
+       with:
+         args: --report
