--- a/.github/workflows/BlackHat_Demo.yml
+++ b/.github/workflows/BlackHat_Demo.yml
@@ -16,25 +16,22 @@ jobs:
      runs-on: ubuntu-latest
      steps:
       - uses: actions/checkout@master
+      - uses: snyk/actions/setup@master
       - name: Snyk test
-        uses: snyk/actions/setup@master
         continue-on-error: true
         env:
           SNYK_TOKEN: ${{ secrets.SNYK_TOKEN }}
-        with:
-          args: --test --all-projects --org=demo-i34
+        run: snyk test --all-projects --org=demo-i34
   snyk-monitor-job:
      needs: snyk-test-job
      runs-on: ubuntu-latest
      steps:
+      - uses: snyk/actions/setup@master
       - uses: actions/checkout@master
       - name: Snyk monitor
-        uses: snyk/actions/setup@master
-        continue-on-error: true
         env:
           SNYK_TOKEN: ${{ secrets.SNYK_TOKEN }}
-        with:
-           command: monitor --all-projects --org=demo-i34
+        run: snyk monitor --all-projects --org=demo-i34
   snyk-container-test-monitor-job:
      runs-on: ubuntu-latest
      steps:
