--- a/.github/workflows/BlackHat_Demo.yml
+++ b/.github/workflows/BlackHat_Demo.yml
@@ -5,13 +5,12 @@ jobs:
     runs-on: ubuntu-latest
     steps:
       - uses: actions/checkout@master
+      - uses: snyk/actions/setup@master
       - name: Snyk Code Upload test
-        uses: snyk/actions/setup@master
         #continue-on-error: true
         env:
           SNYK_TOKEN: ${{ secrets.SNYK_TOKEN }}
-        with:
-          args: --code --report --project-name=npm-js-goof-github-action --org=demo-i34 || true
+        run: snyk code test --report --project-name=npm-js-goof-github-action --org=demo-i34 || true
           
   snyk-test-job:
      runs-on: ubuntu-latest
