--- a/.github/workflows/BlackHat_Demo.yml
+++ b/.github/workflows/BlackHat_Demo.yml
@@ -55,7 +55,7 @@ jobs:
          SNYK_TOKEN: ${{ secrets.SNYK_TOKEN }}
        with:
          image: example:1.0
-         command: monitor
+         command: monitor --org=demo-i34
   ##################################################################
   #snyk-iac-test:
   #   runs-on: ubuntu-latest
